--- a/GlobalGameJam2025_Bubbles/Components/Pages/About.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/About.razor
@@ -1,9 +1,9 @@
-﻿@page "/"
+@page "/about"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>About</PageTitle>
 
 <div class="bg-body-tertiary p-5 rounded">
-    <h1>Home!</h1>
+    <h1>About Us!</h1>
 
     <p>Welcome to your new app.</p>
 </div>
