--- a/GlobalGameJam2025_Bubbles/wwwroot/app.css
+++ b/GlobalGameJam2025_Bubbles/wwwroot/app.css
@@ -2,6 +2,11 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+body {
+    min-height: 75rem;
+    padding-top: 4.5rem;
+}
+
 a, .btn-link {
     color: #006bb7;
 }
