--- a/GlobalGameJam2025_Bubbles/Components/_Imports.razor
+++ b/GlobalGameJam2025_Bubbles/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using GlobalGameJam2025_Bubbles
 @using GlobalGameJam2025_Bubbles.Components
+@using GlobalGameJam2025_Bubbles.Models
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
