--- a/GlobalGameJam2025_Bubbles/Components/_Imports.razor
+++ b/GlobalGameJam2025_Bubbles/Components/_Imports.razor
@@ -9,4 +9,5 @@
 @using GlobalGameJam2025_Bubbles
 @using GlobalGameJam2025_Bubbles.Components
 @using GlobalGameJam2025_Bubbles.Models
+@using GlobalGameJam2025_Bubbles.Services
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
