--- a/GlobalGameJam2025_Bubbles/Components/Pages/About.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/About.razor
@@ -5,5 +5,5 @@
 <div class="bg-body-tertiary p-5 rounded">
     <h1>About Us!</h1>
 
-    <p>Welcome to your new app.</p>
+   <textarea></textarea>
 </div>
