--- a/GlobalGameJam2025_Bubbles/Components/Pages/Game.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/Game.razor
@@ -31,7 +31,7 @@
                      style="max-width:@(bubble.Radius)%;">
                     <img src="@bubble.AvatarUrl" alt="@bubble.Title"
                          style="width: 100%; height: 100%; object-fit: contain;"/>
-                    <small class="bubble-loyalty">@bubble.Loyalty%</small>
+                    <small class="bubble-loyalty">@(bubble.Loyalty * 10)% (@(bubble.LoyaltyDelta * 10)%)</small>
                 </div>
             }
         </div>
@@ -54,10 +54,10 @@
             var dwarvesComment = _gameViewModel.Comments.FirstOrDefault(c => c.Username == "Dwarves");
             var humansComment = _gameViewModel.Comments.FirstOrDefault(c => c.Username == "Humans");
 
-            <span id="comment-elves">@elvenComment?.BodyText test</span>
-            <span id="comment-orcs">@commentOrcs?.BodyText test</span>
-            <span id="comment-dwarves">@dwarvesComment?.BodyText test</span>
-            <span id="comment-humans">@humansComment?.BodyText test</span>
+            <span id="comment-elves">@elvenComment?.BodyText</span>
+            <span id="comment-orcs">@commentOrcs?.BodyText</span>
+            <span id="comment-dwarves">@dwarvesComment?.BodyText</span>
+            <span id="comment-humans">@humansComment?.BodyText</span>
         }
     }
 </div>
