--- a/GlobalGameJam2025_Bubbles/Components/Pages/Game.razor.css
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/Game.razor.css
@@ -70,7 +70,7 @@
     left: 300px;
     max-height: 260px;
     max-width: 650px;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .audience-bubble {
