--- a/GlobalGameJam2025_Bubbles/Components/Pages/Home.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/Home.razor
@@ -12,6 +12,10 @@
 
     <input type="text" placeholder="Username" @bind-value="@Username"/>
     <button class="btn btn-primary" @onclick="StartGameAsync">Start</button>
+    
+    <div class="text-center p-5">
+        <img class="img-fluid" src="img/logo.jpeg" alt="Logo"/>
+    </div>
 </div>
 
 @code {
