--- a/GlobalGameJam2025_Bubbles/Components/Layout/NavMenu.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Bubbleland Ministry of Truth</a>
+        <a class="navbar-brand" href="/">Minister of Truth</a>
 
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
@@ -10,11 +10,11 @@
                     </NavLink>
                     @* <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> *@
                 </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="about">
-                        About
-                    </NavLink>
-                </li>
+                @* <li class="nav-item"> *@
+                @*     <NavLink class="nav-link" href="about"> *@
+                @*         About *@
+                @*     </NavLink> *@
+                @* </li> *@
             </ul>
         </div>
     </div>
