--- a/GlobalGameJam2025_Bubbles/Components/Pages/Game.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/Game.razor
@@ -3,6 +3,14 @@
 @layout AbsoluteLayout
 
 <div class="bg-body-tertiary p-5 rounded" id="game-container">
+    @if (IsLoading)
+    {
+        <div class="loading-overlay">
+            <div class="spinner-border text-primary" role="status"></div>
+            <p>Loading, please wait...</p>
+        </div>
+    }
+
     @if (_gameViewModel != null)
     {
         @if (_gameViewModel.PalantirImageShown)
@@ -35,9 +43,9 @@
                 </div>
             }
         </div>
-   
+
         <div class="tweet-container">
-        <textarea class="form-control col-xs-12" maxlength="280"
+            <textarea class="form-control col-xs-12" maxlength="280"
                   placeholder="Type official reply here. Max lenght 280 characters."
                   @bind="_gameViewModel.Tweet"></textarea>
             <button id="btn-post-tweet"
