--- a/GlobalGameJam2025_Bubbles/Components/Layout/NavMenu.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Layout/NavMenu.razor
@@ -10,11 +10,11 @@
                     </NavLink>
                     @* <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> *@
                 </li>
-                @* <li class="nav-item"> *@
-                @*     <NavLink class="nav-link" href="about"> *@
-                @*         About *@
-                @*     </NavLink> *@
-                @* </li> *@
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="about">
+                        About
+                    </NavLink>
+                </li>
             </ul>
         </div>
     </div>
