App Insights Congig

--- a/GlobalGameJam2025_Bubbles/Components/_Imports.razor
+++ b/GlobalGameJam2025_Bubbles/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using GlobalGameJam2025_Bubbles.Models
 @using GlobalGameJam2025_Bubbles.Services
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using BlazorApplicationInsights;
