--- a/GlobalGameJam2025_Bubbles/Components/_Imports.razor
+++ b/GlobalGameJam2025_Bubbles/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using GlobalGameJam2025_Bubbles.Services
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using BlazorApplicationInsights;
+@using Microsoft.AspNetCore.Authorization
