Convert images to webp

--- a/GlobalGameJam2025_Bubbles/Components/Pages/About.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/About.razor
@@ -50,6 +50,6 @@
     </p>
 
     <div class="text-center p-5">
-        <img class="img-fluid" src="img/logo.jpeg" alt="Game Logo" />
+        <img class="img-fluid" src="img/logo.webp" alt="Game Logo" />
     </div>
 </div>
