--- a/GlobalGameJam2025_Bubbles/Components/Pages/Home.razor
+++ b/GlobalGameJam2025_Bubbles/Components/Pages/Home.razor
@@ -19,7 +19,7 @@
     <button class="btn btn-primary" @onclick="StartGameAsync">Start</button>
     
     <div class="text-center p-5">
-        <img class="img-fluid" src="img/logo.jpeg" alt="Logo"/>
+        <img class="img-fluid" src="img/logo.webp" alt="Logo"/>
     </div>
 </div>
 
